fixed page stuck issue

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,10 @@ body {
   z-index: 99;
 }
 
+.toFixed {
+  overflow: hidden;
+}
+
 /* ----- Cart Items layout ---*/
 .cart-container {
   position: relative;
